--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ networks:
 services:
     nginx:
         image: nginx:stable-alpine
-        container_name: nginx_m
+        container_name: nginx
         ports:
             - "8082:80"
         volumes:
@@ -20,7 +20,7 @@ services:
 
     mysql:
         image: mysql:8.0.13
-        container_name: mysql_m
+        container_name: mysql
         restart: unless-stopped
         tty: true
         ports:
@@ -40,7 +40,7 @@ services:
         build:
             context: .
             dockerfile: Dockerfile
-        container_name: php_m
+        container_name: php
         working_dir: /var/www/html
         volumes:
             - .:/var/www/html
@@ -52,7 +52,7 @@ services:
     phpmyadmin:
         image: phpmyadmin/phpmyadmin
         restart: always
-        container_name: phpmyadmin_m
+        container_name: phpmyadmin
         depends_on:
             - mysql
         ports:
@@ -66,7 +66,7 @@ services:
 
     composer:
         image: composer:latest
-        container_name: composer_m
+        container_name: composer
         volumes:
             - .:/var/www/html
         working_dir: /var/www/html
@@ -77,7 +77,7 @@ services:
         build:
             context: .
             dockerfile: Dockerfile
-        container_name: artisan_m
+        container_name: artisan
         volumes:
             - .:/var/www/html
         depends_on:
@@ -89,7 +89,7 @@ services:
 
     npm:
         image: node:latest
-        container_name: npm_m
+        container_name: npm
         volumes:
             - .:/var/www/html
         working_dir: /var/www/html
