fix: update env.example file

--- a/.env.example
+++ b/.env.example
@@ -63,3 +63,8 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
 VERIFICATION_EXPIRED=2
+NEWSAPI_URL=https://newsapi.org/v2/everything
+NEWSAPI_API_KEY=6b680156d4a04dffb28daeabafe54195
+
+GUARDIAN_URL=https://content.guardianapis.com/search
+GUARDIAN_API_KEY=0d9533f0-8590-4dd3-aa9d-df60a3828fea
