--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,7 +56,7 @@ services:
         depends_on:
             - mysql
         ports:
-            - "8086:80"
+            - "8081:80"
         environment:
             PMA_HOST: mysql
             MYSQL_ROOT_PASSWORD: root
@@ -94,5 +94,27 @@ services:
             - .:/var/www/html
         working_dir: /var/www/html
         entrypoint: [ 'npm' ]
+        networks:
+            - laravel
+
+    redis:
+        image: redis:latest
+        container_name: redis
+        restart: unless-stopped
+        volumes:
+            - ./data/redis:/data
+            - ./redis/redis.conf:/etc/redis/redis.conf
+        ports:
+            - "6379:6379"
+        networks:
+            - laravel
+
+    redis-commander:
+        image: rediscommander/redis-commander
+        container_name: redis-commander
+        ports:
+            - "8085:8081"
+        environment:
+            - REDIS_HOSTS=local:redis:6379
         networks:
             - laravel
